--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "react-html-parser": "^2.0.2"
   },
   "scripts": {
     "build": "webpack --config webpack.config.prod.js",
